--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 Your Name. Built with ❤️ using HTML, CSS & JS.</p>
+    <p>&copy; 2025 Farhan Aditya. Built with ❤️ using HTML, CSS & JS.</p>
   </footer>
 
   <script src="script.js"></script>
